--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -34,7 +34,7 @@
                     <div id="username-group" class="form-group">
                         <label for="username" class="control-label" >Username:</label>
                         <div class="input-group">
-                            <input type="text" style="" onchange="checkUsername()" class="form-control" id="username"
+                            <input type="text" style="" onkeypress="checkUsername() onchange="checkUsername()" class="form-control" id="username"
                                    name="username" placeholder=""
                                    aria-describedby="username-help-block">
                             <div class="input-group-addon">@decaturmakers.org</div>
