--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -61,7 +61,7 @@
                                 type: "GET",
                                 url: "register",
                                 data: {
-                                    "username": jQuery('#username').text(),
+                                    "username": jQuery('#username').val(),
                                     "action": 'check'
                                 },
                                 dataType: "text json",
