--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -66,7 +66,8 @@
                                 },
                                 dataType: "text json",
                                 success: function(resultJson) {
-                                    if (resultJson['result'] == 'true') {
+                                    console.log("JSON: " + resultJson['result']);
+                                    if (resultJson['result'] == true) {
                                         clearError();
                                     } else {
                                         showError();
