--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -1,18 +1,44 @@
 <script language="javascript">
-angular.module('registration', []).controller('registrationCtrl', ['$scope', function($scope) {
+(function() {
+  "use strict";
+  angular
+    .module('registration', ['ngMessages'])
+    .controller('registrationCtrl', mainCtrl)
+    .directive('passwordVerify', passwordVerify);
 
-        function match(arg1, arg2) {
-            console.log(arg1);
-            console.log(arg2);
-            console.log(arg1 == arg2);
+  function mainCtrl($scope) {
+    // Some code
+  }
 
-            if (arg1 == arg2) {
-                return true;
-            }
+  function passwordVerify() {
+    return {
+      restrict: 'A', // only activate on element attribute
+      require: '?ngModel', // get a hold of NgModelController
+      link: function(scope, elem, attrs, ngModel) {
+        if (!ngModel) return; // do nothing if no ng-model
 
-            return false;
-        }
-}]);
+        // watch own value and re-validate on change
+        scope.$watch(attrs.ngModel, function() {
+          validate();
+        });
+
+        // observe the other value and re-validate on change
+        attrs.$observe('passwordVerify', function(val) {
+          validate();
+        });
+
+        var validate = function() {
+          // values
+          var val1 = ngModel.$viewValue;
+          var val2 = attrs.passwordVerify;
+
+          // set validity
+          ngModel.$setValidity('passwordVerify', val1 === val2);
+        };
+      }
+    }
+  }
+})();
 </script>
 
 <body style="background-color: #EBEBEB">
@@ -47,14 +73,14 @@ angular.module('registration', []).controller('registrationCtrl', ['$scope', fun
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group" ng-class="{ 'has-error' : register.password.$dirty && register.password.$invalid }">
                         <label for="password" class="control-label" >Password:</label>
-                        <input type="password" style="display: inline;" class="form-control" id="password" name="password" ng-model="password"required>
+                        <input type="password" style="display: inline;" class="form-control" id="password" name="password" required ng-model="password" password-verify="{{passwordMatch}}">
                     </div>
 
-                    <div class="form-group" ng-class="{ 'has-error' : match(register.password, register.passwordMatch)}">
+                    <div class="form-group" ng-class="{ 'has-error' : register.passwordMatch.$dirty && register.passwordMatch.$invalid }">
                         <label for="passwordMatch" class="control-label" >Confirm Password:</label>
-                        <input type="password" style="display: inline;" class="form-control" id="passwordMatch" name="passwordMatch" ng-model="passwordMatch" required>
+                        <input type="password" style="display: inline;" class="form-control" id="passwordMatch" name="passwordMatch" ng-model="passwordMatch" required password-verify="{{password}}">
                     </div>
 
                     <div class="form-group">
