--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -76,11 +76,19 @@
                     <div class="form-group" ng-class="{ 'has-error' : register.password.$dirty && register.password.$invalid && register.passwordMatch.$dirty && register.passwordMatch.$invalid}">
                         <label for="password" class="control-label" >Password:</label>
                         <input type="password" style="display: inline;" class="form-control" id="password" name="password" required ng-model="password" password-verify="{{passwordMatch}}">
+                        <div class="help-block" ng-messages="register.password.$error" ng-if="register.password.$dirty">
+                            <p ng-message="required">This field is required.</p>
+                            <p ng-message="passwordVerify">The fields do not match.</p>
+                        </div>
                     </div>
 
                     <div class="form-group" ng-class="{ 'has-error' : register.passwordMatch.$dirty && register.passwordMatch.$invalid }">
                         <label for="passwordMatch" class="control-label" >Confirm Password:</label>
                         <input type="password" style="display: inline;" class="form-control" id="passwordMatch" name="passwordMatch" ng-model="passwordMatch" required password-verify="{{password}}">
+                        <div class="help-block" ng-messages="register.password.$error" ng-if="register.password.$dirty">
+                            <p ng-message="required">This field is required.</p>
+                            <p ng-message="passwordVerify">The fields do not match.</p>
+                        </div>
                     </div>
 
                     <div class="form-group">
