--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -66,7 +66,7 @@
                                 },
                                 dataType: "text json",
                                 success: function(resultJson) {
-                                    console.log("JSON: " + resultJson['result']);
+                                    console.log("Test text");
                                     if (resultJson['result'] == true) {
                                         clearError();
                                     } else {
