--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -1,24 +1,32 @@
-<?php
-    wp_enqueue_style( 'bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
-    wp_enqueue_script('bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js');
+<?php echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-members-table.css', __FILE__ ) . '">' . "\n"; ?>
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs-3.3.5/jq-2.1.4,dt-1.10.8/datatables.min.css"/>
 
-    // Preventing loading direct from browser
-    defined( 'ABSPATH' ) or die();
+        <script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
+        <script type="text/javascript" charset="utf-8">
+            $(document).ready(function() {
+                $('#member_table').DataTable( {
+                  "columnDefs": [
+                    { "width": "20%", "targets": 0 }
+                  ]
+                } );
+            } );
+        </script>
+        <br>
+        <div class="container" style="margin-right: 0px; width: 1000px; margin-left: 0px;">
 
-    echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-members-table.css', __FILE__ ) . '">' . "\n";
-?>
+            <table id="member_table" class="table table-striped table-bordered" width="100%">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>RFID Tag #</th>
+                        <th>Membership Plan</th>
+                        <th>Subscription Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <?php include 'admin-member-data.php'; ?>
+                </tbody>
+            </table>
 
-<body style="background-color: #EBEBEB">
-    <br>
-    <table class="table table-striped table-bordered" style="text-align: center">
-        <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>RFID Tag #</th>
-            <th>Membership Plan</th>
-            <th>Subscription Status</th>
-        </tr>
-    <?php include 'admin-member-data.php'; ?>
-    </table>
-</body>
+        </div>
