--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -59,7 +59,7 @@
                     <br>
                       <button type="edit" class="btn mas-button" ng-click="editing = true" ng-show="editing == false">Edit Profile</button>
 
-                      <button type="save" class="btn mas-button" ng-click="editing = false; jQuery('.userForm').submit(); console.log('Submitted')" ng-show="editing == true">Save Changes</button>
+                      <button type="save" class="btn mas-button" ng-click="editing = false; document.getElementById('userForm').submit(); console.log('Submitted')" ng-show="editing == true">Save Changes</button>
                     <br>
                       <button type="password" class="btn mas-button">Change Password</button>
                 </div>
