Fixing submit with Angular

--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -63,6 +63,9 @@
                     <br>
                       <button type="password" class="btn mas-button">Change Password</button>
                 </div>
+                <script>
+                    alert('TEST')
+                </script>
           </div>
 
           <div flex id="inputContainer" class="inputDemo" ng-cloak>
