Fixing submit with Angular

--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -59,18 +59,18 @@
                     <br>
                       <button type="edit" class="btn mas-button" ng-click="editing = true" ng-show="editing == false">Edit Profile</button>
 
-                      <button type="save" class="btn mas-button" ng-click="editing = false; document.getElementById('userForm').submit(); console.log('Submitted')" ng-show="editing == true">Save Changes</button>
+                      <button type="save" class="btn mas-button" ng-click="editing = false;" ng-show="editing == true">Save Changes</button>
                     <br>
                       <button type="password" class="btn mas-button">Change Password</button>
                 </div>
-                <script>
-                    alert('TEST')
-                </script>
           </div>
 
           <div flex id="inputContainer" class="inputDemo" ng-cloak>
              <md-content layout-padding>
                 <form id="userForm" name="projectForm" action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
+                  <button type="edit" class="btn mas-button" ng-click="editing = true" ng-show="editing == false">Edit Profile</button>
+                  <button type="submit" class="btn mas-button" ng-click="editing = false;" ng-show="editing == true">Save Changes</button>
+
                    <md-input-container class="md-block">
                       <label>First Name</label>
                       <input required name="firstName" ng-model="project.firstName" ng-disabled="!editing" value="<?php echo $firstName; ?>">
