--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -36,13 +36,13 @@
         The script is all set in this file but needs to be special phped to be accessed correctly.
         Therefore it is also below just for deving.
       -->
-      <!--<script language="javascript">-->
-         <!--angular-->
-            <!--.module('memberProfile', ['ngMaterial'])-->
-            <!--.controller('DemoCtrl', function($scope) {-->
-                <!--$scope.editing = false;-->
-            <!--});-->
-      <!--</script>-->
+      <script language="javascript">
+         angular
+            .module('memberProfile', ['ngMaterial'])
+            .controller('DemoCtrl', function($scope) {
+                $scope.editing = false;
+            });
+      </script>
 
       <div ng-app="memberProfile" ng-controller="DemoCtrl">
 
