--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -24,14 +24,6 @@
     }
 ?>
 
-<script type="text/javascript">
-    angular
-        .module('memberProfile', [])
-        .controller('MemberCtrl', function($scope) {
-            $scope.editing = false;
-        });
-</script>
-
 <div ng-app="memberProfile" ng-controller="MemberCtrl">
     <div class="row">
         <div class="mas-title col-md-12">
@@ -79,14 +71,14 @@
         <div style="text-align: center" class="panel panel-default col-md-4">
 
             <div class="panel-heading">
-                <h3 class="panel-title">Class Details</h3>
+                <h3 class="panel-title">Card Details</h3>
             </div>
 
             <div class="panel-body">
                 <form name="payment">
                     <div class="form-group">
                         <label for="cardNum">Last 4 Digits:</label>
-                        <input type="card" name="cardNum" class="form-control" disabled value="<?php echo $card->last4; ?>">
+                        <input type="card" name="cardNum" class="form-control" disabled value="****-****-****-<?php echo $card->last4; ?>">
                     </div>
 
                     <div class="form-group">
