full removal of angular

--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -24,7 +24,7 @@
     }
 ?>
 
-<div ng-app="memberProfile" ng-controller="MemberCtrl">
+<div>
     <div class="row">
         <div class="mas-title col-md-12">
             Welcome, <?php echo $user->getName()->getFullName(); ?>!        
