--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -55,7 +55,7 @@
 
                 <div class="form-group">
                     <label for="inputEmail" class="control-label">Personal Email</label>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Email" required value="<?php echo $personalEmail; ?>">
                 </div>
 
                 <div class="form-group">
@@ -71,7 +71,7 @@
         <div style="text-align: center" class="panel panel-default col-md-4">
 
             <div class="panel-heading">
-                <h3 class="panel-title">Card Details</h3>
+                <h3 class="panel-title mas-title">Card Details</h3>
             </div>
 
             <div class="panel-body">
@@ -83,7 +83,7 @@
 
                     <div class="form-group">
                         <label for="expirationDate">Expiration Date:</label>
-                        <input required type="date" name="expirationDate" class="form-control" disabled value="<?php echo $card->exp_month."/".$card->exp_year; ?>" />
+                        <input required type="text" name="expirationDate" class="form-control" disabled value="<?php echo $card->exp_month."/".$card->exp_year; ?>" />
                     </div>
 
                     <div class="form-group">
