--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -63,6 +63,8 @@
                     <input type="text" class="form-control" id="username" value="<?php echo $dm_email; ?>" disabled>
                 </div>
 
+                <input type="hidden" name="action" value="update_self">
+
                 <button type="submit" class="btn mas-button">Update Info</button>
             </form>
         </div>
